date preproc removed from gender_conv, readme updated

--- a/dataPreproc.ipynb
+++ b/dataPreproc.ipynb
@@ -25,7 +25,7 @@
     "\n",
     "np.set_printoptions(threshold=np.inf)\n",
     "# right now we only take 10k samples to make the testing of the code faster\n",
-    "sample_size = 10000\n",
+    "sample_size = 50000\n",
     "# this is the maximum number of words we take from the blogs\n",
     "max_length = 500\n",
     "ps = PorterStemmer()\n",
@@ -139,7 +139,7 @@
     "dataout = {'age' : labels[:,0] , 'gender': gender_list_binary , 'post': padded_docs_unlistified}\n",
     "\n",
     "dfout = pd.DataFrame( data=dataout ) \n",
-    "dfout.to_json('out.json')"
+    "dfout.to_json('out2.json')"
    ]
   }
  ],
